[package]
name = "rusty_audio"
version = "1.4.1"
edition = "2021"
description = "Convenient sound library for small projects and educational purposes."
homepage = "https://github.com/cleancut/rusty_engine/tree/master/rusty_audio"
repository = "https://github.com/cleancut/rusty_engine/tree/master/rusty_audio"
readme = "README.md"
keywords = [ "audio", "sound", "effects", "sfx", "rusty" ]
categories = [ "game-development", "multimedia::audio" ]
license = "MIT OR Apache-2.0"

[dependencies]
rodio = "0.17.1"
